# vim: set noexpandtab:

2014-01-22 Anyes
	* Added functions for mljj 
	* Update 2LSSWh isolation cuts to tighter set (not backward compatible)
	
2014-01-22 Steve
	* Fixed SusyNtAna getEventWeight
		* Added useProcSumw argument. Order of args has changed,
		  so be careful!

2014-01-17 Steve
	* Changed default value of susyFinalState to 0 to be consistent with SUSYTools
	* Changed order of Hdecay enum in WhTruthExtractor. kUnknown is now 0 to be
	  consistent with susyFinalState and SUSYTools.
	* Added empty MCWeighter class definition which will handle the MC normalization
		* At the moment it only holds the sys enum
	* Added cross section systematic to getEventWeight methods

2014-01-16 Anyes
	* Added SusyDefs: human readable analysis type
	* Added SusyNtAna function to get/set sumw map
	* Added SystNtTools overload function for hasZ and getMT2

2014-01-07 Steve
	* Added clarification comments for the sumw map update of last commit
	* Fixed usage of proc ID when retrieving the sumw

2014-01-04 Steve
	* Updated the sumw map to handle signal samples with multiple processes
		* The map is now keyed by (MCID, proc)
		* New typedefs in SusyDefs: SumwMap, SumwMapKey
		* buildSumwMap method will now find all process cutflow hists
		  in the input files and fill the map accordingly
	* getEventWeight now has new argument for controlling the sumw feature: useProcSumw
		* Setting this to true for all bkg MC and data shouldn't have any effect
		* It should only be set to false for samples that have multiple 
		  processes and you DON'T want to normalize each process separately.
		* NOTE: I changed the order of the arguments!
			* Luckily, the other affected arg is new and 
			  probably nobody is using it yet anyway.

2013-12-30 Steve
	* Fixed method to retrieve SUSYTools cross section
	* Tagging SusyNtuple-00-01-07

2013-12-19 Steve
	* Added SUSYTools/data directory to the new installation script

2013-12-17 Steve
	* Commented out old getEventWeight methods